# Video-qa

./: README.md  app.py  app1.py  pyproject.toml  requirements.txt  secrets.toml
